portfolio/api2 work

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <title>Calendar</title>
 </head>
 <body>
-    <img src="./assets/calendar.png" alt="">
+  <div class="container">
+    <div class="row-sm-12">
+      <div class="col">
+        <p id="para">Click The Calendar For A Full List Of Holidays</p>
+      </div>
+      
+    </div>
+  </div>
     <div class="container">
         <div class="row">
-          <div class="col">
-            Column
-          </div>
-          <div class="col">
-            Column
-          </div>
-          <div class="col">
-            Column
+          <div class="col-sm-12">
+            <img src="./assets/calendar.png" alt=""
+            onclick="calApi()";>
           </div>
         </div>
       </div>
