api2 final week

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         </div>
       </div>
 
+      <div class="container">
+        <div class="row">
+          <div class="col">
+      <nav>
+        <button class="next">Next 10</button>
+        <button class="prev">Previous 10</button>
+    </nav>
+        </div>
+      </div>
+    </div>
+      <section>
+
+      </section>
+
     
     <script src="./index.js"></script>
 </body>
