--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <!-- <div class="container">
         <div class="row">
           <div class="col">
       <nav>
@@ -38,7 +38,8 @@
     </div>
       <section>
 
-      </section>
+      </section> -->
+
 
     
     <script src="./index.js"></script>
